# LumePay

./: .gitignore  CONTRIBUTING.md  DEVPROGRESS.md  LICENSE  README.md  developmentProgess.txt  docker-compose.yml  package-lock.json  package.json  project-doc  project-doc-general  project-structure  turbo.json
.turbo/daemon/: 0bdafe5b7556a3f7-turbo.log.2025-03-28  0bdafe5b7556a3f7-turbo.log.2025-03-29
apps/backend/: .env.example  .eslintrc.js  DATABASE.md  check-table.js  direct-migration.js  eval $(ssh-agent -s)  eval $(ssh-agent -s).pub  jest.config.js  jest.config.ts  jest.setup.ts  jest.setupAfterEnv.ts  package-lock.json  package.json  run-failure-tracking-migration.bat  run-failure-tracking-migration.sql  run-migration.bat  run-migration.js  tsconfig.json  tsconfig.tsbuildinfo
apps/backend/migrations/: create-scheduled-payments.sql
apps/backend/scripts/: check-pg-connection.js  database-migration.js  load-test-payments.js  setup-database.js  test-currency-conversion.js  test-db-connection.js  test-local-db.js  test-payment-errors.js  test-payment-flow.js  test-scheduled-payments.js  verify-scheduled-payments.ts
apps/backend/src/: app.ts  diagnostics.ts  find-type-error.ts  index.ts  type-check.ts  type-diagnostics.ts  types.ts
apps/backend/test/: run-all-tests.ps1  run-all-tests.sh  setup.ts  tsconfig.json
apps/backend/utils/: direct-logger.js  (+1 more)
apps/contracts/: Cargo.toml
apps/contracts/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
apps/frontend/: package-lock.json  package.json
docs/sdk/: README.md  TECHNICAL_SPEC.md
(+225 files in other folders)
