[package]
name = "lume-escrow"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for LumeSquare P2P marketplace"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.18.2"
thiserror = "1.0.49"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "1.18.2"
solana-sdk = "1.18.2"

[lib]
crate-type = ["cdylib", "lib"]
